[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/TitleScreen/background.png" type="Texture" id=1]
[ext_resource path="res://GUI/WaviclesTheme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/Story.gd" type="Script" id=3]
[ext_resource path="res://GUI/Robin.tres" type="DynamicFont" id=4]
[ext_resource path="res://GUI/Alex.tres" type="DynamicFont" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LogBook" type="Panel" parent="."]
margin_left = 25.0
margin_top = 33.0
margin_right = 1252.0
margin_bottom = 303.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="LogBook"]
margin_left = 40.0
margin_top = 26.325
margin_right = 98.0
margin_bottom = 40.325
text = "Log Book"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alex" type="Label" parent="LogBook"]
margin_left = 43.0
margin_top = 52.0
margin_right = 1196.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 5 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Robin" type="Label" parent="LogBook"]
margin_left = 45.0
margin_top = 142.514
margin_right = 1196.0
margin_bottom = 165.514
custom_fonts/font = ExtResource( 4 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Email" type="Panel" parent="."]
margin_left = 26.0
margin_top = 315.0
margin_right = 629.0
margin_bottom = 693.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="Email"]
margin_left = 40.0
margin_top = 25.731
margin_right = 98.0
margin_bottom = 39.731
text = "Email"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailText" type="Label" parent="Email"]
margin_left = 40.0
margin_top = 59.0
margin_right = 571.0
margin_bottom = 352.0
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chat" type="Panel" parent="."]
margin_left = 647.0
margin_top = 315.0
margin_right = 1250.0
margin_bottom = 693.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageScroller" type="ScrollContainer" parent="Chat"]
margin_left = 40.0
margin_top = 26.0
margin_right = 560.0
margin_bottom = 274.0
rect_min_size = Vector2( 520, 248 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Messages" type="VBoxContainer" parent="Chat/MessageScroller"]

[node name="Next" type="Button" parent="Chat"]
margin_left = 457.477
margin_top = 291.785
margin_right = 566.477
margin_bottom = 355.785
theme = ExtResource( 2 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Chat/Next" to="." method="_on_Next_button_up"]
